# maui-dialer

./: .gitignore  CMakeLists.txt  contacts.pro  dialer.pro  org.kde.communicator.desktop  org.kde.contacts.desktop  org.kde.dialer.desktop  org.maui.dialer.json  union.pro
android_files/: AndroidManifest.xml
assets/: contacts_assets.qrc  union_assets.qrc
src/: main.cpp  main.qml  qml.qrc  union.h
src/db/: db.cpp  db.h  dbactions.cpp  dbactions.h  script.sql
src/dialer/linux/: CMakeLists.txt  plasma_dialer.notifyrc
src/interfaces/: abstractinterface.h  androidintents.cpp  androidintents.h  androidinterface.cpp  androidinterface.h  contactimage.cpp  contactimage.h  kcontactsinterface.cpp  kcontactsinterface.h  linuxinterface.cpp  linuxinterface.h  synchroniser.cpp  synchroniser.h  syncing.cpp  syncing.h
src/libs/: libvcard.pri
src/models/contacts/: calllogs.cpp  calllogs.h  contactsmodel.cpp  contactsmodel.h
src/views/contacts/: ContactDelegate.qml  ContactDialog.qml  ContactsView.qml  EditContactDialog.qml  GridContactDelegate.qml
src/views/dialer/: Dialer.qml  DialerButton.qml  DialerView.qml
src/views/logs/: LogsView.qml
src/widgets/: MessageComposer.qml
